# AdventOfCode2025

./: .clang-format  .clangd  .gitignore  01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  11_graphviz.dot  12.cpp  CMakeLists.txt  CMakePresets.json  README
.zed/: debug.json
