cmake_minimum_required(VERSION 3.18.0)
project(aoc2025 VERSION 0.1.0 LANGUAGES  CXX)

set(CMAKE_CXX_STANDARD 26)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(day01 01.cpp)
add_executable(day02 02.cpp)
add_executable(day03 03.cpp)
add_executable(day04 04.cpp)
add_executable(day05 05.cpp)
add_executable(day06 06.cpp)
add_executable(day07 07.cpp)
add_executable(day08 08.cpp)
add_executable(day09 09.cpp)
add_executable(day10 10.cpp)
find_package(Z3 REQUIRED CONFIG)
target_include_directories(day10 PRIVATE ${Z3_CXX_INCLUDE_DIRS})
target_link_libraries(day10 PRIVATE ${Z3_LIBRARIES})
target_compile_options(day10 PRIVATE ${Z3_COMPONENT_CXX_FLAGS})

add_executable(day11 11.cpp)
add_executable(day12 12.cpp)
